#132 fix overlapping issues

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -76,7 +76,7 @@ code{
 	right:0;
 	height:6px;
 	box-shadow: inset 0 6px 6px -6px var(--vscode-scrollbar-shadow);
-	z-index:20;
+	z-index:11;
 	pointer-events:none;
 }
 
@@ -282,7 +282,7 @@ code{
 #tableColHeaders.sticky .tableColHeader {
 	position: sticky;
 	top: inherit;
-	z-index: 3;
+	z-index: 11;
 	background-color: var(--vscode-editor-background);
 }
 .resizeCol{
@@ -801,7 +801,7 @@ body.tagLabelsRightAligned .gitRef.tag{
 
 #controls.sticky {
 	position:sticky;
-	z-index: 4;
+	z-index:12;
 }
 
 #repoControl, #branchControl, #showRemoteBranchesControl{
